--- a/src/index.html
+++ b/src/index.html
@@ -23,31 +23,32 @@
                 <!-- <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="price"> -->
                 <select class="custom-select" placeholder="Highest Priority" name="p1">
                                 <option value="" disabled selected>Target price range</option>
-                                <option value="500">500</option>
-                                <option value="1000">1000</option>
-                                <option value="1500">1500</option>
+                                <option value="1">1000</option>
+                                <option value="2">1500</option>
+                                <option value="3">2000</option>
+                                <option value="4">2500</option>
                 </select>
         </div>
         </div>
 
         <div class="submission" id="p1">
-        <label for="basic-url">Optimisation priorities</label>
+        <label for="basic-url">Optimisation for</label>
         <select class="custom-select" placeholder="Highest Priority" name="p1">
-                <option value="" disabled selected>Highest Priority</option>
+                <option value="" disabled selected></option>
+                <option value="1">Price</option>
                 <option value="2">Supplier Rating</option>
-                <option value="1">Component Performance</option>
-                <!-- <option value="3">Three</option> -->
+                <option value="3">Component Performance</option>
         </select>
         </div>
 
-        <div class="submission" id="p2">
+        <!-- <div class="submission" id="p2">
         <select class="custom-select" placeholder="Highest Priority" name="p2">
                 <option value="" disabled selected>Highest Priority</option>
                 <option value="1">Supplier Rating</option>
                 <option value="2">Component Performance</option>
                 <!-- <option value="3">Three</option> -->
-        </select>
-        </div>
+        <!-- </select> -->
+        <!-- </div> -->
 
         <div class="submission" id="s">
                 <button class="btn btn-primary" id="submit">Generate Configuration</button>
